shared/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpaq-portal-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpaq-portal-dep
  template:
    metadata:
      labels:
        app: cpaq-portal-dep
    spec:
      os:
        name: windows
      nodeSelector:
        kubernetes.io/os: windows
        kubernetes.azure.com/os-sku: Windows2022
      strategy:
        type: Recreate
      containers:
        - name: portal
          image: cordicdev.azurecr.io/cpaq-portal
          ports:
            - { name: https, containerPort: 443 }
            - { name: http, containerPort: 80 }
          volumeMounts:
---
apiVersion: v1
kind: Service
metadata:
  name: cpaq-portal-svc-iis
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: cpaq-portal-dep
