shared/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpaq-portal-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - "example.com"
      secretName: tls-secret
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /eventsws
            pathType: Prefix
            backend:
              service:
                name: cpaq-portal-svc-iis
                port:
                  number: 80
          - path: /jobactionws
            pathType: Prefix
            backend:
              service:
                name: cpaq-portal-svc-iis
                port:
                  number: 80
          - path: /jobbookws
            pathType: Prefix
            backend:
              service:
                name: cpaq-portal-svc-iis
                port:
                  number: 80
          - path: /joblistws
            pathType: Prefix
            backend:
              service:
                name: cpaq-portal-svc-iis
                port:
                  number: 80
          - path: /jobqueryws
            pathType: Prefix
            backend:
              service:
                name: cpaq-portal-svc-iis
                port:
                  number: 80
